# tesseract_gui

./: CMakeLists.txt
acm/: CMakeLists.txt
acm/demo/: imgui_acm_demo.cpp
acm/include/tesseract_gui/acm/: imgui_add_allowed_collision_entry_dialog.h
acm/src/: imgui_add_allowed_collision_entry_dialog.cpp
app/: CMakeLists.txt
app/demo/: CMakeLists.txt
app/demo/src/: EditorLayer.cpp  EditorLayer.h  HazelnutApp.cpp
app/demo/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
app/include/tesseract_gui/app/: Hazel.h  hzpch.h
app/include/tesseract_gui/app/core/: Application.h  Assert.h  Base.h  EntryPoint.h  Input.h  Layer.h  LayerStack.h  Log.h  Window.h  Window.h.autosave
app/include/tesseract_gui/app/debug/: Instrumentor.h
app/include/tesseract_gui/app/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
app/include/tesseract_gui/app/imgui/: ImGuiLayer.h
app/include/tesseract_gui/app/platform/Windows/: WindowsWindow.h
app/include/tesseract_gui/app/utils/: PlatformUtils.h.autosave
app/src/core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Window.cpp
app/src/imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp
app/src/math/: Math.cpp
app/src/platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp
app/src/platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp
app/src/renderer/: Buffer.cpp  EditorCamera.cpp  Framebuffer.cpp  GraphicsContext.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp
app/src/scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp
cmake/: Findstb.cmake
hazel/: CMakeLists.txt
hazel/demo/: CMakeLists.txt
hazel/demo/src/: EditorLayer.cpp  EditorLayer.h  HazelnutApp.cpp
hazel/demo/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
hazel/include/tesseract_gui/hazel/: Hazel.h  hzpch.h
hazel/include/tesseract_gui/hazel/core/: Application.h  Assert.h  Base.h  EntryPoint.h  Input.h  Layer.h  LayerStack.h  Log.h  PlatformDetection.h  Timer.h  Window.h
hazel/include/tesseract_gui/hazel/debug/: Instrumentor.h
hazel/include/tesseract_gui/hazel/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
hazel/include/tesseract_gui/hazel/imgui/: ImGuiLayer.h
hazel/include/tesseract_gui/hazel/platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLFramebuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLUniformBuffer.h  OpenGLVertexArray.h
hazel/include/tesseract_gui/hazel/platform/Windows/: WindowsWindow.h
hazel/include/tesseract_gui/hazel/renderer/: EditorCamera.h  Framebuffer.h  OrthographicCameraController.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Texture.h  UniformBuffer.h  VertexArray.h
hazel/include/tesseract_gui/hazel/scene/: Components.h  Entity.h  Scene.h  SceneCamera.h  SceneSerializer.h  ScriptableEntity.h
hazel/src/core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Window.cpp
hazel/src/imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp
hazel/src/math/: Math.cpp
hazel/src/platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp
hazel/src/platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp
hazel/src/renderer/: Buffer.cpp  EditorCamera.cpp  Framebuffer.cpp  GraphicsContext.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp
hazel/src/scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp
imgui/: CMakeLists.txt
imgui/demo/: glfw_demo.cpp
imgui/include/tesseract_gui/imgui/: imgui_manager.h  imgui_manager_glfw.h  imgui_widget.h
imgui/src/: imgui_manager.cpp  imgui_manager_glfw.cpp  imgui_widget.cpp
